# inferbench-media

./: .gitignore  AGENTS.md  PROJECT_BRIEF.md  README.md  pyproject.toml
.ai-dev/: README.md  RULES.md
.ai-dev/current/: active.md
.ai-dev/current/stash/: README.md
.ai-dev/discussions/: index.md
.ai-dev/discussions/archived/: README.md
.ai-dev/discussions/proposals/: README.md
.ai-dev/implemented/: index.md
.ai-dev/implemented/features/: README.md
.ai-dev/templates/: current-bugfix.md  current-feature.md  discussion-proposal.md  event-examples.jsonl  handoff.md  implemented-feature.md
docs/superpowers/plans/: 2026-06-25-fixed-image-ort-cpu.md
recipes/: yolo_ort_cpu_image.yaml
src/inferbench_media/: __init__.py  cli.py  config.py  image.py  reporting.py  runner.py  tiny_onnx.py
tests/: test_fixed_image_benchmark.py
