[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "inferbench-media"
version = "0.1.0"
description = "Fixed-scope media inference benchmark toolkit prototype."
readme = "PROJECT_BRIEF.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "onnx>=1.16",
  "onnxruntime>=1.18",
  "Pillow>=10",
  "PyYAML>=6",
]

[project.scripts]
inferbench-media = "inferbench_media.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

